vulnerable-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'web'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: "piesecurity/apache-struts2-cve-2017-5638:latest"
          imagePullPolicy: Always
          name: web
          securityContext:
          #   runAsUser: 1000
             privileged: true      
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
      #serviceAccountName: web-service-account
      serviceAccountName: admin-service-account
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: 'web'
  labels:
    app: web
spec:
  type: "NodePort"
  ports:
  - name: http
    port: 80
    nodePort: 30004
    protocol: TCP
    targetPort: 8080
  selector:
    app: "web"
